--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
-    #  - name: Terraform Fmt
-     #   run: terraform fmt -check
+      - name: Terraform Fmt
+        run: terraform fmt -check
 
       - name: Terraform Validate
         run: terraform validate
